# cli

./: Cargo.toml
.github/workflows/: build.yml
src/: compiler.rs  main.rs
src/commands/: build.rs  dev.rs  mod.rs
src/watcher/: mod.rs  poll.rs  utils.rs
