[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.0"
clap = { version = "4.3.3", features = ["cargo", "unstable-styles"] }
densky-core = { path = "../core" }

ahash = "0.8.3"
recv-dir = "0.2.0"

ureq = "2.6.2"
signal-hook = "0.3"
